--- a/InternetFanPage/InternetFanPage.csproj
+++ b/InternetFanPage/InternetFanPage.csproj
@@ -347,7 +347,7 @@
     <Compile Include="Migrations\PageContextModelSnapshot.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\CategoryResult.cs" />
-    <Compile Include="Models\Concert.cs" />
+    <Compile Include="Models\Location.cs" />
     <Compile Include="Models\FanPageContext.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\LoginDetails.cs" />
@@ -364,7 +364,7 @@
     <Compile Include="Models\TweetPost.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ConcertsService.cs" />
+    <Compile Include="Services\LocationsService.cs" />
     <Compile Include="Services\ShopService.cs" />
     <Compile Include="Services\TweetService.cs" />
     <Compile Include="Services\UserServices.cs" />
@@ -389,7 +389,7 @@
     <Content Include="Content\images\plus.png" />
     <Content Include="Content\images\twitter.png" />
     <Content Include="Content\images\videoPhoto.png" />
-    <Content Include="css\concerts.css" />
+    <Content Include="css\locations.css" />
     <Content Include="css\manager.css" />
     <Content Include="css\products.css" />
     <Content Include="css\sidebar.css" />
@@ -429,7 +429,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Concerts.cshtml" />
+    <Content Include="Views\Home\Locations.cshtml" />
     <Content Include="Views\Home\Manager.cshtml" />
     <Content Include="Views\Home\Products.cshtml" />
     <Content Include="Views\Home\UserProducts.cshtml" />
